--- a/Views/MainViewController/Base.lproj/MainViewController.storyboard
+++ b/Views/MainViewController/Base.lproj/MainViewController.storyboard
@@ -22,7 +22,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="bonfire" translatesAutoresizingMaskIntoConstraints="NO" id="Ish-16-9vX">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="country-scene" translatesAutoresizingMaskIntoConstraints="NO" id="Ish-16-9vX">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             </imageView>
@@ -206,7 +206,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="bonfire" width="3248" height="4872"/>
+        <image name="country-scene" width="1242" height="2208"/>
         <image name="edit" width="28" height="28"/>
         <image name="fab" width="60" height="60"/>
         <image name="settings" width="28" height="24"/>
