--- a/Views/SettingsViewController/SettingsViewController.storyboard
+++ b/Views/SettingsViewController/SettingsViewController.storyboard
@@ -89,8 +89,8 @@
                                     <constraint firstAttribute="trailing" secondItem="gWf-9z-icT" secondAttribute="trailing" constant="16" id="seO-yQ-Wb8"/>
                                 </constraints>
                             </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mem-1S-8R8" customClass="UIViewX" customModule="RealmTimers" customModuleProvider="target">
-                                <rect key="frame" x="16" y="307" width="343" height="117"/>
+                            <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="mem-1S-8R8" customClass="UIViewX" customModule="RealmTimers" customModuleProvider="target">
+                                <rect key="frame" x="16" y="307" width="343" height="203"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="General" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hth-Ah-VXf">
                                         <rect key="frame" x="16" y="16" width="311" height="23.5"/>
@@ -116,15 +116,34 @@
                                         <color key="textColor" name="PrimaryColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Debug Mode" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IgT-78-1S0">
+                                        <rect key="frame" x="16" y="142" width="311" height="31"/>
+                                        <fontDescription key="fontDescription" name="LibreBaskerville-Regular" family="Libre Baskerville" pointSize="15"/>
+                                        <color key="textColor" name="PrimaryColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="S2u-wH-jGQ">
+                                        <rect key="frame" x="278" y="142" width="51" height="31"/>
+                                        <color key="backgroundColor" red="0.23137254900000001" green="0.30196078430000001" blue="0.40784313729999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <connections>
+                                            <action selector="debugAction:" destination="yNf-5s-XvX" eventType="valueChanged" id="Kk3-7d-F1r"/>
+                                        </connections>
+                                    </switch>
                                 </subviews>
                                 <color key="backgroundColor" red="0.23137254900000001" green="0.30196078430000001" blue="0.40784313729999999" alpha="0.83126100349999998" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="trailing" secondItem="hth-Ah-VXf" secondAttribute="trailing" constant="16" id="2gm-Uv-tQ6"/>
+                                    <constraint firstItem="IgT-78-1S0" firstAttribute="leading" secondItem="vxK-ml-iWU" secondAttribute="leading" id="83s-Jr-0DQ"/>
                                     <constraint firstItem="CZK-Ff-4jP" firstAttribute="top" secondItem="hth-Ah-VXf" secondAttribute="bottom" constant="16" id="8gL-m7-w0i"/>
+                                    <constraint firstItem="IgT-78-1S0" firstAttribute="top" secondItem="S2u-wH-jGQ" secondAttribute="top" id="DUB-0w-eyd"/>
                                     <constraint firstItem="hth-Ah-VXf" firstAttribute="top" secondItem="mem-1S-8R8" secondAttribute="top" constant="16" id="LOB-ox-mJn"/>
+                                    <constraint firstItem="IgT-78-1S0" firstAttribute="top" secondItem="vxK-ml-iWU" secondAttribute="bottom" constant="8" id="OaI-pu-tMq"/>
+                                    <constraint firstItem="S2u-wH-jGQ" firstAttribute="trailing" secondItem="vxK-ml-iWU" secondAttribute="trailing" id="SyW-Nf-Es2"/>
                                     <constraint firstItem="vxK-ml-iWU" firstAttribute="leading" secondItem="mem-1S-8R8" secondAttribute="leading" constant="16" id="UXU-sG-Kt2"/>
                                     <constraint firstItem="T54-vy-ZxG" firstAttribute="leading" secondItem="mem-1S-8R8" secondAttribute="leading" constant="16" id="aL9-6g-W5t"/>
+                                    <constraint firstItem="S2u-wH-jGQ" firstAttribute="centerY" secondItem="IgT-78-1S0" secondAttribute="centerY" id="aNk-Cf-lSj"/>
                                     <constraint firstItem="T54-vy-ZxG" firstAttribute="top" secondItem="CZK-Ff-4jP" secondAttribute="bottom" constant="13" id="buH-6Z-WrT"/>
+                                    <constraint firstItem="IgT-78-1S0" firstAttribute="trailing" secondItem="S2u-wH-jGQ" secondAttribute="trailing" id="cqN-pE-uQo"/>
                                     <constraint firstAttribute="trailing" secondItem="vxK-ml-iWU" secondAttribute="trailing" constant="16" id="g9W-6a-owI"/>
                                     <constraint firstAttribute="trailing" secondItem="T54-vy-ZxG" secondAttribute="trailing" constant="16" id="ggE-JR-qmk"/>
                                     <constraint firstItem="hth-Ah-VXf" firstAttribute="leading" secondItem="mem-1S-8R8" secondAttribute="leading" constant="16" id="jpY-CT-vgN"/>
@@ -163,6 +182,7 @@
                     </view>
                     <connections>
                         <outlet property="closeButton" destination="Daf-Cd-Wh3" id="Rui-ut-Pup"/>
+                        <outlet property="debugSwitch" destination="S2u-wH-jGQ" id="8Sv-Uw-N9J"/>
                         <outlet property="generalView" destination="mem-1S-8R8" id="kRI-WF-mbp"/>
                         <outlet property="soundView" destination="IpV-rm-AQ0" id="crC-7B-1db"/>
                     </connections>
