--- a/Views/ClockViewController/ClockViewController.storyboard
+++ b/Views/ClockViewController/ClockViewController.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14845" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14854.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14799.2"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14806.4"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -77,7 +77,7 @@
                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </state>
                                         <connections>
-                                            <action selector="showPreFireTapped:" destination="ljv-3F-WUT" eventType="touchUpInside" id="LEe-DW-uhx"/>
+                                            <action selector="showPreFireTapped:" destination="ljv-3F-WUT" eventType="touchUpInside" id="ExG-ae-bzC"/>
                                         </connections>
                                     </button>
                                 </subviews>
@@ -97,7 +97,6 @@
                                         <exclude reference="8Ix-XJ-pQ7"/>
                                         <exclude reference="SWg-yh-sBe"/>
                                         <exclude reference="qce-0C-2IT"/>
-                                        <exclude reference="Orr-b6-xXm"/>
                                     </mask>
                                 </variation>
                             </view>
@@ -128,7 +127,37 @@
                 <viewControllerPlaceholder storyboardIdentifier="boom" storyboardName="PreFireViewController" referencedIdentifier="boom" id="wrM-ry-hMI" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="F8g-Ec-4Lm" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="6256" y="109"/>
+            <point key="canvasLocation" x="5888" y="38"/>
+        </scene>
+        <!--Testing View Controller-->
+        <scene sceneID="UzZ-Ct-SmE">
+            <objects>
+                <viewController storyboardIdentifier="test" id="JAV-6c-qYZ" customClass="TestingViewController" customModule="RealmTimers" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="tma-Ct-FZK">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cOY-3x-aFi" customClass="FloatingActionButton" customModule="RealmTimers" customModuleProvider="target">
+                                <rect key="frame" x="281" y="757" width="120" height="120"/>
+                                <color key="backgroundColor" name="PreRed"/>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <state key="normal" image="fab"/>
+                                <connections>
+                                    <action selector="closeTapped:" destination="JAV-6c-qYZ" eventType="touchUpInside" id="uUM-ZP-eSq"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstAttribute="bottom" secondItem="cOY-3x-aFi" secondAttribute="bottom" constant="19" id="4So-G8-ssq"/>
+                            <constraint firstItem="UAT-WH-QLg" firstAttribute="trailing" secondItem="cOY-3x-aFi" secondAttribute="trailing" constant="13" id="h2W-fM-49x"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="UAT-WH-QLg"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Efa-Q5-PZ8" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="6541" y="413"/>
         </scene>
     </scenes>
     <resources>
@@ -136,6 +165,9 @@
         <image name="fab" width="60" height="60"/>
         <namedColor name="GreyedOutColor">
             <color red="0.63921568627450975" green="0.62745098039215685" blue="0.70196078431372544" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="PreRed">
+            <color red="0.89803921568627454" green="0.011764705882352941" blue="0.019607843137254902" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
